<resources>
    <string name="app_name">RedoOffProgram</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="passord">passord</string>
    <string name="email_address">email address</string>
    <string name="MMail">MMail</string>
    <string name="name">name</string>
    <string name="rePassword">RePassword</string>
    <string name="register">register</string>
    <string name="have_account_login_here">have account, login here</string>
    <string name="account_registration">Account Registration</string>
    <string name="Message">Text here</string>
    <string name="subject">Subject</string>
    <string name="receiver">Receiver Email</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="encrypt_text">Encrypt text</string>
</resources>